[project]
name = "outwiker"
description = "A cross-platform software for keeping your notes in a tree"
authors = [
	{name = "Eugene Ilin (aka Jenyay)", email = "jenyay.ilin@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["outliner", "notepad", "notes", "wiki"]
requires-python = ">=3.8"
dependencies = [
	"wxPython==4.2.1",
	"Pillow==10.4.0",
	"idna>=2.10",
	"pyparsing==3.1.3",
	"psutil>=6.0.0",
	"rcssmin>=1.1",
    "attrdict3==2.0.2",
    "cacheman @ file:///${PROJECT_ROOT}/depends/cacheman",
    "cyhunspell @ file:///${PROJECT_ROOT}/depends/cyhunspell",
]
classifiers=[
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Natural Language :: English",
	"Natural Language :: Russian",
	"Natural Language :: Ukrainian",
	"Natural Language :: Swedish",
	"Natural Language :: German",
	"Operating System :: Microsoft :: Windows :: Windows 7",
	"Operating System :: Microsoft :: Windows :: Windows 10",
	"Operating System :: Microsoft :: Windows :: Windows 11",
	"Operating System :: Unix",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Topic :: Desktop Environment :: File Managers",
	"Topic :: Office/Business",
	"Topic :: Text Editors",
	"Topic :: Text Processing :: Markup",
]

dynamic = ["version"]

[project.urls]
Repository = "https://github.com/Jenyay/outwiker.git"
Issues = "https://github.com/Jenyay/outwiker/issues"

[dependency-groups]
dev = [
    "invoke==2.2.0",
    "cx-freeze==7.2.7",
    "pympler==1.1",
    "pytest>=8.3.2",
    "coverage>=7.6.1",
    "jinja2>=3.1",
    "colorama==0.4.6",
    "sphinx>=7.1",
    "lief==0.15.1",
    "owbuildtools",
]


[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
owbuildtools = { path = "owbuildtools", editable = true }

[project.urls]
Homepage = "https://jenyay.net/Outwiker/English"
Documentation = "https://outwiker.readthedocs.io/"
Repository = "https://github.com/Jenyay/outwiker"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project.scripts]
outwiker = "outwiker.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["outwiker.tests*"]

[tool.setuptools.exclude-package-data]
outwiker = ["tests*"]

[tool.setuptools.dynamic]
version = {attr = "outwiker.__version_str__"}
