[project]
name = "outwiker"
description = "A cross-platform software for keeping your notes in a tree"
authors = [
	{name = "Eugene Ilin (aka Jenyay)", email = "jenyay.ilin@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["outliner", "notepad", "notes", "wiki"]
requires-python = ">=3.8"
dependencies = [
	"wxPython==4.2.1",
	"Pillow==10.4.0",
	"idna>=2.10",
	"pyparsing==3.1.3",
	"psutil>=6.0.0",
	"rcssmin>=1.1",
    "attrdict3==2.0.2",
    "cacheman @ file:///${PROJECT_ROOT}/depends/cacheman",
    "cyhunspell @ file:///${PROJECT_ROOT}/depends/cyhunspell",
]
classifiers=[
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Natural Language :: English",
	"Natural Language :: Russian",
	"Natural Language :: Ukrainian",
	"Natural Language :: Swedish",
	"Natural Language :: German",
	"Operating System :: Microsoft :: Windows :: Windows 7",
	"Operating System :: Microsoft :: Windows :: Windows 10",
	"Operating System :: Microsoft :: Windows :: Windows 11",
	"Operating System :: Unix",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Topic :: Desktop Environment :: File Managers",
	"Topic :: Office/Business",
	"Topic :: Text Editors",
	"Topic :: Text Processing :: Markup",
]

dynamic = ["version"]

[project.urls]
Repository = "https://github.com/Jenyay/outwiker.git"
Issues = "https://github.com/Jenyay/outwiker/issues"

[dependency-groups]
dev = [
    "invoke==2.2.0",
    "cx-freeze==7.2.7",
    "pympler==1.1",
    "pytest>=8.3.2",
    "coverage>=7.6.1",
    "jinja2>=3.1",
    "colorama==0.4.6",
    "sphinx>=7.1",
    "lief==0.15.1",
    "owbuildtools",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
owbuildtools = { path = "owbuildtools", editable = true }

[project.urls]
Homepage = "https://jenyay.net/Outwiker/English"
Documentation = "https://outwiker.readthedocs.io/"
Repository = "https://github.com/Jenyay/outwiker"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project.scripts]
outwiker = "outwiker.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["outwiker.tests*"]

[tool.setuptools.exclude-package-data]
outwiker = ["tests*"]

[tool.setuptools.dynamic]
version = {attr = "outwiker.__version_str__"}

[tool.cxfreeze]
executables = [
{script = "src/outwiker/__main__.py", base = "gui", icon = "images/outwiker.ico", target_name = "outwiker"}
]

[tool.cxfreeze.build_exe]
excludes = ["tkinter",
         "PyQt4",
         "PyQt5",
         "unittest",
         "sqlite3",
         "numpy",
         "pydoc",
         "test",
         "pycparser",
         "xmlrpclib",
         "bz2",
         "cffi",
         "bsddb",
         "pytest",
         "Sphynx",
         "PIL.SunImagePlugin",
         "PIL.IptcImagePlugin",
         "PIL.McIdasImagePlugin",
         "PIL.DdsImagePlugin",
         "PIL.FpxImagePlugin",
         "PIL.PixarImagePlugin",
         ]
includes = ["importlib",
             "urllib",
             "outwiker.api",
             "outwiker.api.core",
             "outwiker.api.core.attachment",
             "outwiker.api.core.config",
             "outwiker.api.core.defines",
             "outwiker.api.core.events",
             "outwiker.api.core.exceptions",
             "outwiker.api.core.hashcalculator",
             "outwiker.api.core.html",
             "outwiker.api.core.images",
             "outwiker.api.core.pagecontentcache",
             "outwiker.api.core.text",
             "outwiker.api.core.tree",
             "outwiker.api.core.plugins",
             "outwiker.api.core.pagestyle",
             "outwiker.api.core.spellchecker",
             "outwiker.api.core.tags",
             "outwiker.api.gui",
             "outwiker.api.gui.actions",
             "outwiker.api.gui.basetextstylingcontroller",
             "outwiker.api.gui.configelements",
             "outwiker.api.gui.controls",
             "outwiker.api.gui.defines",
             "outwiker.api.gui.dialogs",
             "outwiker.api.gui.hotkeys",
             "outwiker.api.gui.images",
             "outwiker.api.gui.longprocessrunner",
             "outwiker.api.gui.mainwindow",
             "outwiker.api.gui.preferences",
             "outwiker.api.gui.texteditorhelper",
             "outwiker.api.app",
             "outwiker.api.app.application",
             "outwiker.api.app.config",
             "outwiker.api.app.attachment",
             "outwiker.api.app.bookmarks",
             "outwiker.api.app.clipboard",
             "outwiker.api.app.messages",
             "outwiker.api.app.system",
             "outwiker.api.app.texteditor",
             "outwiker.api.app.tree",
             "outwiker.api.pages",
             "outwiker.api.pages.html",
             "outwiker.api.pages.html.gui",
             "outwiker.api.pages.html.guitools",
             "outwiker.api.pages.html.actions",
             "outwiker.api.pages.wiki",
             "outwiker.api.pages.wiki.config",
             "outwiker.api.pages.wiki.defines",
             "outwiker.api.pages.wiki.editor",
             "outwiker.api.pages.wiki.gui",
             "outwiker.api.pages.wiki.wikiparser",
             "outwiker.api.pages.wiki.wikipage",
             "outwiker.gui.controls.popupbutton",
             "outwiker.gui.controls.filestreectrl",
             "outwiker.gui.images",
             "outwiker.core.attachfilters",
             "outwiker.utilites.actionsguicontroller",
             "outwiker.utilites.text",
             "PIL.Image",
             "PIL.ImageFile",
             "PIL.ImageDraw",
             "PIL.ImageDraw2",
             "PIL.ImageFont",
             "PIL.ImageFilter",
             "PIL.IcoImagePlugin",
             "PIL.PngImagePlugin",
             "PIL.BmpImagePlugin",
             "PIL.TiffImagePlugin",
             "PIL.JpegImagePlugin",
             "xml",
             "json",
             "asyncio",
             "html.parser",
             "pkg_resources",
             "hunspell",
             "hunspell.platform",
             "cacheman",
             "cacheman.cachewrap",
             ]
include_files = ["src/help",
            "src/iconset",
            "src/images",
            "src/locale",
            "src/spell",
            "src/styles",
            "src/textstyles",
            #"src/plugins",
]
#icon = "images/outwiker.ico"
